--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li>
         <a href="temario/eventos.html">DOM (Document Object Model) y Eventos (Event)</a>
       </li>
+      <li>
+        <a href="temario/ajax.html">Asincronismo: setTimeout, setInterval y AJAX</a>
+      </li>
     </ol>
   </body>
 </html>
