--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <li>
         <a href="temario/ajax.html">Asincronismo: setTimeout, setInterval y AJAX</a>
       </li>
+      <li>
+        <a href="temario/historial.html">Historial (History)</a>
+      </li>
     </ol>
   </body>
 </html>
