--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <li>
         <a href="temario/historial.html">Historial (History)</a>
       </li>
+      <li>
+        <a href="temario/promesas.html">Promesas (Promises)</a>
+      </li>
     </ol>
   </body>
 </html>
