--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="temario/variables.html">Variables (Var, Let, Const) y Tipos de Datos</a>
       </li>
       <li>
-        <a href="temario/operadores.html">Operadores (Compraración, Logicos, Aritméticos)</a>
+        <a href="temario/operadores.html">Operadores (Compraración, Lógicos, Aritméticos)</a>
       </li>
       <li>
         <a href="temario/eventos.html">DOM (Document Object Model) y Eventos (Event)</a>
